<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textColor="@android:color/black">
    </TextView>

    <RadioGroup
        android:id="@+id/answer_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/first_answer_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/answer11"
            android:textSize="17sp"></RadioButton>

        <RadioButton
            android:id="@+id/second_answer_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/answer33"
            android:textSize="17sp"></RadioButton>

        <RadioButton
            android:id="@+id/third_answer_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/answer11"
            android:textSize="17sp"></RadioButton>

        <RadioButton
            android:id="@+id/fourth_answer_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/answer11"
            android:textSize="17sp"></RadioButton>

    </RadioGroup>

    <Button
        android:id="@+id/next_question_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:text="@string/next"
        android:textColor="@android:color/black"
        android:textSize="16sp"></Button>

</LinearLayout>