<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/matrix_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/a_matrix"
            android:textColor="@android:color/black"
            android:textSize="18dp"></TextView>

        <Button
            android:id="@+id/rows_amount_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:drawableRight="@drawable/ic_arrow_drop_down"
            android:padding="8dp"
            android:text="3"
            android:textSize="18dp">
        </Button>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:src="@drawable/ic_mult"></ImageView>

        <Button
            android:id="@+id/columns_amount_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:padding="8dp"
            android:drawableRight="@drawable/ic_arrow_drop_down"
            android:text="3"
            android:textSize="18dp">
        </Button>

        <Button
            android:id="@+id/save_matrix_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/save"
            android:textSize="18dp">
        </Button>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/matrix_cells_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
    </FrameLayout>

    <Button
        android:id="@+id/fill_matrix_with_zero_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/nullable_matrix"
        android:textSize="18dp">
    </Button>

</LinearLayout>